后端数据--登录页面

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,14 @@ spring:
     url: jdbc:mysql://localhost:3306/salarymanage
     username: root
     password: 1234
+  thymeleaf:
+    prefix: classpath:/static/
+    suffix: .html
+
+  mvc:
+    static-path-pattern: /**
+  resources:
+    static-locations: classpath:/static/
 
 mybatis-plus:
   global-config:
