--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
             <version>3.4.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
